# mon-package-test

./: .gitignore  README.md  pyproject.toml
mon_package_test/: __init__.py  core.py
